<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JNIActivity!</string>
    <string name="app_name">app_name</string>
    <string name="back">Back</string>
    <string name="help">Help</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="login">Login</string>
    <string name="tips">Tips</string>
    <string name="copyright">Power by Kat.Dennings</string>

    <string name="inputtip">Your Password</string>

</resources>
