<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bgc"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        <Button
	        android:id="@+id/back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5dip" 
            android:layout_marginRight="5dip" 
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip" 
            android:text="@string/back"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg_null"
        />
        <Button
	        android:id="@+id/help"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5dip" 
            android:layout_marginRight="5dip" 
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip" 
            android:text="@string/help"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg_null"
        />


        <ImageView 
        	android:id="@+id/login_logo"
            android:layout_below="@id/back"
            android:background="@color/transparent"
            android:tint="@color/white"
            android:src="@drawable/bike"  
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dip" 
            android:layout_marginBottom="10dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
        </ImageView> 

        <EditText
        	android:id="@+id/inputText"
            android:layout_below="@id/login_logo"
            android:layout_width="250dip" 
            android:layout_height="wrap_content" 
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dip" 
            android:layout_marginBottom="5dip" 
            android:hint="@string/inputtip"
            android:password="true"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:maxLength="24"
            android:gravity="left"
            android:background="@drawable/button_bg"
        />

        <Button
	        android:id="@+id/tips"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="5dip" 
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip" 
            android:layout_below="@id/inputText"
            android:layout_alignLeft="@id/inputText"
            android:text="@string/tips"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
        />

        <Button
	        android:id="@+id/login"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5dip" 
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip" 
            android:layout_below="@id/inputText"
            android:layout_alignRight="@id/inputText"
            android:layout_toRightOf="@id/tips"
            android:text="@string/login"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
        />

        <TextView
            android:id="@+id/copyright"
            android:layout_alignParentBottom="true" 
            android:layout_marginTop="10dip" 
            android:layout_marginBottom="10dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/copyright"
            android:textColor="@color/white"
            android:gravity="center"
        />

</RelativeLayout>

